--- a/test-grid/src/index.html
+++ b/test-grid/src/index.html
@@ -8,10 +8,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="./../jqwidgets/styles/jqx.base.css" type="text/css" />
+  <link rel="stylesheet" href="./../node_modules/dhtmlx-gantt/codebase/dhtmlxgantt.css " type="text/css" />
+  <script src="./../node_modules/dhtmlx-gantt/codebase/dhtmlxgantt.js"></script>
+
   <script src="./../scripts/demos.js"></script>
+
 
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+ <app-root></app-root>
+
 </body>
 </html>
